--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ html {
   padding: 0;
   margin: 0;
   font-family: "Nunito Sans", sans-serif;
-  background-color: #2f4454;
+  /* background-color: #2f4454; */
+  background-color: aqua;
 }
 
 .nav-link {
