--- a/style.css
+++ b/style.css
@@ -80,22 +80,22 @@ html {
   cursor: pointer;
 }
 
-nav {
+.navigation {
+  margin: 0;
+  text-align: right;
   list-style-type: none;
   margin: 0;
   padding: 0;
   height: 84px;
 }
 
-.navigation {
-  margin: 0;
-  text-align: right;
-  overflow: hidden;
-}
-
 .nav-item {
   padding: 1rem;
   display: inline-block;
+}
+
+ul.navigation li:last-child {
+  padding: 0rem;
 }
 
 /* Introductory Banner */
@@ -165,6 +165,16 @@ pre {
 
 .code-response {
   color: var(--terminal-response);
+}
+
+.code-response-link {
+  text-decoration: none;
+  color: var(--terminal-response);
+}
+
+.code-response-link:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 /* Project Cards */
